# Regex-in-eBPF

kernel-regex/: Cargo.toml  README.md
kernel-regex/ebpf/: Cargo.toml
kernel-regex/ebpf/src/: main.rs
kernel-regex/kernel-regex/: Cargo.toml  build.rs
kernel-regex/kernel-regex-common/: Cargo.toml
kernel-regex/kernel-regex-ebpf/: Cargo.toml
kernel-regex/kernel-regex-ebpf/src/: main.rs
kernel-regex/kernel-regex/src/: main.rs  nfa_to_dfa.rs  regex_to_nfa.rs
kernel-regex/userspace/: Cargo.toml
kernel-regex/userspace/src/: main.rs
userspace-regex/: Cargo.toml  README.md
userspace-regex/ebpf/: Cargo.toml
userspace-regex/ebpf/src/: main.rs
userspace-regex/userspace/: Cargo.toml
userspace-regex/userspace/src/: main.rs
